apps/sample-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: sample-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-api
                port:
                  name: http
